Cabal-Version: >= 1.10

Name:     backupzoah
Version:  0.1
Category: 
Synopsis: In case of emergencies

-- Description:

Author:       Ben Millwood <haskell@benmachine.co.uk>
Maintainer:   Ben Millwood <haskell@benmachine.co.uk>
-- Bug-reports:
Copyright:    2014 Ben Millwood
License:      BSD3
License-file: LICENSE

Extra-source-files: ChangeLog

Build-type:  Simple
Tested-with: GHC == 7.8.2

Executable twitter
  Main-is: Main.hs
  Other-modules:
    Markov
    Orphans
    Secret
    
  Build-depends:
    aeson,
    authenticate-oauth,
    base < 5,
    bytestring,
    case-insensitive,
    conduit,
    conduit-extra,
    containers,
    data-default,
    directory,
    fast-logger,
    hashable,
    http-conduit,
    lens,
    monad-logger,
    pretty,
    random,
    resourcet,
    text,
    transformers,
    twitter-conduit,
    twitter-types,
    unordered-containers

  Default-language: Haskell2010
  Other-extensions:
    FlexibleContexts,
    OverloadedStrings 

  GHC-Options:    -W
  Hs-source-dirs: src
